--- a/Progbase3/MoiveHubSystem/Views/GenSelectWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/GenSelectWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:MoiveHubSystem.ViewModels"
         mc:Ignorable="d"
         x:Name="genSel"
-        Title="GenSelectWindow" Height="450" Width="800">
+        Title="GenSelectWindow" Height="480" Width="800" MinHeight="480" MinWidth="800">
     <Window.DataContext>
         <vm:GenSelectViewModel />
     </Window.DataContext>
