--- a/Progbase3/MoiveHubSystem/App.xaml
+++ b/Progbase3/MoiveHubSystem/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MoiveHubSystem"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException"
              StartupUri="Views/AuthenticationWindow.xaml">
     <Application.Resources>
         <ResourceDictionary >
