--- a/Progbase3/MoiveHubSystem/Views/ImportFilmsWindow.xaml
+++ b/Progbase3/MoiveHubSystem/Views/ImportFilmsWindow.xaml
@@ -12,6 +12,10 @@
         <vm:ImportViewModel />
     </Window.DataContext>
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="../images/icons/importIco.png" Stretch="Uniform"  Opacity="0.3" />
+        </Grid.Background>
+        
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -24,7 +28,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10 50" IsReadOnly="True" Text="{Binding PathOfXML}" />
+        <TextBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10 50" IsEnabled="False" Text="{Binding PathOfXML}" />
         <StackPanel Grid.Column="3" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button Content="Destination of XML" Margin="10" Command="{Binding PickDirectory}"/>
             <Button Content="Submit" Margin="10" CommandParameter="{Binding ElementName=importWnd}" Command="{Binding ExecImport}"/>    
